--- a/style.css
+++ b/style.css
@@ -3,12 +3,30 @@ body{
   margin: 0;
 }
 
+#sub{
+  border-bottom: 3px solid gray;
+  padding: 10px;
+  padding-bottom: 13px;
+
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  background-color: gray;
+}
+#sub a{
+  font-size: 20px;
+  text-align: center;
+}
 h1{
   font-size: 45px;
   font-weight: bold;
   text-align: center;
+
+
+
   color:black;
+
   margin-top:80px;
+  margin-bottom: 0px;
 
   padding-bottom: 20px;
 
